# Lima-tango-cpp

./: .gitignore  CMakeLists.txt  README.md  pom-dev-dhyana.xml  pom-dev-eiger.xml  pom-dev-simu.xml  pom-dev-spectrumone.xml  pom-dev-ufxc.xml  pom-dev-xspress3-64.xml  pom-dev.xml  pom-linux-dev.xml  pom-linux-dev_64.xml  pom-linux-dev_64_el5.xml  pom-linux.xml  pom-win-dev.xml  pom-win.xml  pom.xml  pom_64-dev-eiger.xml  pom_64-dev-ufxc.xml  pom_64-dev.xml  pom_64-linux-dev.xml  pom_64.xml  pom_64_Win7_shared.xml  pom_64_Win7_shared_Teledyne.xml  pom_64_Win7_shared_dev.xml  pom_64_Win7_shared_pco.xml  pom_64_Win7_shared_spectrumone.xml  pom_64_dev-pco.xml  pom_64_el5.xml  pom_64_el7-basler-pylon6.xml  pom_64_el7.xml  pom_64_win_shared.xml  pom_test_fbt_pylon5.xml
.github/workflows/: codeql-analysis.yml
doc/: Makefile  conf.py  index.rst  make.bat
doc/Andor3/: Attributes.html  DevCommands.html  DevCommandsTable.html  Properties.html  TangoDevStates.html  index.html
doc/AndorCCD/: Attributes.html  Description.html  DevCommandsTable.html  TangoDevStates.html  andorccd.rst  index.html  user_guide.html
doc/AviexCCD/: Attributes.html  DevCommands.html  DevCommandsList.html  DevCommandsTable.html  Properties.html  TangoDevStates.html  aviexccd.rst  index.html  user_guide.html
doc/BaslerCCD/: Attributes.html  baslerccd.rst  index.html  index.rst
doc/Dhyana/: Attributes.html  DevCommands.html  DevCommandsTable.html  Properties.html  TangoDevStates.html  dhyana.rst  index.html  user_guide.html
doc/Dhyana6060/: dhyana.html  dhyana.rst  dhyana6060.rst
doc/Eiger/: Attributes.html  Description.html  DevCommands.html  DevCommandsTable.html  Properties.html  eiger.rst  index.html  user_guide.html
doc/FitGaussian/: diagram_class.puml
doc/Hamamatsu/: Attributes.html  Description.html  DevCommands.html  DevCommandsTable.html  Properties.html  TangoDevStates.html  hamamatsu.rst  index.html  user_guide.html
doc/ImXpad/: Attributes.html  Description.html  DevCommands.html  DevCommandsList.html  DevCommandsTable.html  Properties.html  imxpad.rst  index.html  user_guide.html
doc/Lambda/: AttrCompressionRate.html  AttrburstMode.html  AttrconfigFile.html  AttrconfigFilePath.html  AttrdistortionCorrection.html  AttrenergyThreshold.html  AttrenergyThreshold1.html  AttrhighVoltage.html  Attrhumidity.html  Attributes.html  AttrlibraryVersion.html  AttrlinearityCorrection.html  AttrprecompressEnabled.html  AttrreadoutTime.html  AttrsaturationFlag.html  AttrsaturationThreshold.html  Attrtemperature.html  ClassDescription.html  FullDocument.html  Properties.html  States.html  TitleBanner.html  index.html  lambda.rst
doc/Layout/: Attributes.html  DevCommands.html  DevCommandsList.html  DevCommandsTable.html  Properties.html  TangoDevStates.html  index.html  layout.rst  user_guide.html
doc/LimaDetector/: Attributes.html  Description.html  DevCommands.html  DevCommandsList.html  DevCommandsTable.html  Properties.html  TangoDevStates.html  index.html  limadetector.rst  user_guide.html
doc/MarCCD/: index.html  marccd.rst
doc/Mask/: Attributes.html  Description.html  DevCommands.html  DevCommandsTable.html  Properties.html  TangoDevStates.html  index.html  mask.rst  user_guide.html
doc/Maxipix/: Attributes.html  DevCommands.html  DevCommandsTable.html  Properties.html  TangoDevStates.html  index.html  maxipix.rst  user_guide.html
doc/Merlin/: AttrchargeSumming.html  AttrcolourMode.html  AttrcontinuousRW.html  Attrcounter.html  Attrgain.html  Attributes.html  AttroperatingEnergy.html  AttrsoftwareVersion.html  Attrtemperature.html  AttrthScanNum.html  AttrthStart.html  AttrthStep.html  AttrthStop.html  Attrthreshold0.html  Attrthreshold1.html  Attrthreshold2.html  Attrthreshold3.html  Attrthreshold4.html  Attrthreshold5.html  Attrthreshold6.html  Attrthreshold7.html  AttrtriggerOutLVDS.html  AttrtriggerOutLVDSDelay.html  AttrtriggerOutLVDSInvert.html  AttrtriggerOutTTL.html  AttrtriggerOutTTLDelay.html  AttrtriggerOutTTLInvert.html  AttrtriggerStartType.html  AttrtriggerStopType.html  AttrtriggerUseDelay.html  ClassDescription.html  CmdAbort.html  CmdDevState.html  CmdResetHW.html  CmdSoftTrigger.html  CmdState.html  CmdStatus.html  CmdTHScan.html  Commands.html  FullDocument.html  (+5 more)
doc/Pco/: Attributes.html  Description.html  DevCommands.html  DevCommandsList.html  DevCommandsTable.html  Properties.html  index.html  pco.rst  user_guide.html
doc/PerkinElmer/: index.html  perkinelmer.rst
doc/PilatusPixelDetector/: Attributes.html  DevCommands.html  DevCommandsList.html  DevCommandsTable.html  Properties.html  index.html  pilatuspixeldetector.rst  user_guide.html
doc/PrincetonCCD/: Attributes.html  Description.html  Properties.html  index.html  princetonccd.rst  user_guide.html
doc/ProsilicaCCD/: index.html  prosilicaccd.rst
doc/RoiCounters/: Attributes.html  DevCommands.html  DevCommandsTable.html  Properties.html  TangoDevStates.html  index.html  roicounters.rst
doc/SimulatorCCD/: Attributes.html  Description.html  DevCommands.html  DevCommandsTable.html  Properties.html  TangoDevStates.html  index.html  simulatorccd.rst  user_guide.html
doc/SlsEiger/: AttrclockDivider.html  CmdState.html  (+36 more)
src/: AcquisitionTask.cpp  AcquisitionTask.h  AdscCCD.cpp  AdscCCD.h  Andor3.cpp  Andor3.h  Andor3Class.cpp  AndorCCD.cpp  AndorCCD.h  AndorCCDClass.h  Arithmetic.cpp  Arithmetic.h  ArithmeticClass.cpp  ArithmeticClass.h  ArithmeticStateMachine.cpp  AviexCCD.cpp  AviexCCD.h  AviexCCDClass.cpp  AviexCCDClass.h  AviexCCDStateMachine.cpp  BaslerCCD.cpp  BaslerCCD.h  BaslerCCDClass.cpp  BaslerCCDClass.h  ClassFactory.cpp  Factory.cpp  Factory.h  Hamamatsu.cpp  Hamamatsu.h  HamamatsuClass.cpp  LimaDetector.cpp  LimaDetector.h  LimaDetector.hpp  LimaDetectorClass.cpp  LimaDetectorClass.h  LimaDetectorStateMachine.cpp  Makefile  Makefile.linux  MarCCD.cpp  MarCCD.h  (+34 more)
test/: .gitignore  config-test-Lima.txt  test_limadetector_display_image.py  test_limadetector_loop_snap.py  test_limadetector_loop_snap_internal_multi.py  test_limadetector_write_exposure_in_video.py  test_mask_write_maskImage.py
(+504 files in other folders)
